--- a/s9/util/s9.rc
+++ b/s9/util/s9.rc
@@ -5,7 +5,7 @@
 # based on a script in this article:
 # http://ninetimes.cat-v.org/tips/2009/07/19/0/
 
-s9dir=$home/lib/s9fes
+s9dir=/lib/s9fes
 
 mkdir -p $home/lib/s9fes
 
@@ -13,6 +13,7 @@ for (i in . $objtype lib ext contrib)
  	bind -a $s9dir/$i $home/lib/s9fes
 
 S9FES_LIBRARY_PATH=$home/lib/s9fes
+S9FES_IMAGE_DIR=$home/lib/s9fes/$objtype
 /$objtype/bin/s9fes $*
 
 unmount $home/lib/s9fes
